// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlowDriver formatConfig() [ignore] handles empty 1`] = `
"[ignore]
"
`;

exports[`FlowDriver formatConfig() [ignore] supports 1`] = `
"[ignore]
.*/__tests__/.*
"
`;

exports[`FlowDriver formatConfig() [include] handles empty 1`] = `
"[include]
"
`;

exports[`FlowDriver formatConfig() [include] supports 1`] = `
"[include]
./foo.js
./bar
"
`;

exports[`FlowDriver formatConfig() [libs] handles empty 1`] = `
"[libs]
"
`;

exports[`FlowDriver formatConfig() [libs] supports 1`] = `
"[libs]
./foo.js.flow
"
`;

exports[`FlowDriver formatConfig() [lints] handles values as numbers 1`] = `
"[lints]
all=error
sketchy-null-bool=off
untyped-type-import=warn
"
`;

exports[`FlowDriver formatConfig() [lints] supports 1`] = `
"[lints]
all=error
sketchy-null-bool=off
untyped-type-import=warn
"
`;

exports[`FlowDriver formatConfig() [lints] supports dashed keys 1`] = `
"[lints]
all=error
sketchy-null-bool=off
untyped-type-import=warn
"
`;

exports[`FlowDriver formatConfig() [options] handles arrays 1`] = `
"[options]
module.file_ext=.js
module.file_ext=.jsx
"
`;

exports[`FlowDriver formatConfig() [options] handles escaped string 1`] = `
"[options]
suppress_comment=\\\\\\\\(.\\\\\\\\|\\\\n\\\\\\\\)*\\\\\\\\$FlowFixMe
"
`;

exports[`FlowDriver formatConfig() [options] handles objects 1`] = `
"[options]
module.name_mapper='^image![a-zA-Z0-9$_]+$' -> 'ImageStub'
module.name_mapper.extension='css' -> '<PROJECT_ROOT>/CSSFlowStub.js.flow'
"
`;

exports[`FlowDriver formatConfig() [options] handles primitives 1`] = `
"[options]
emoji=true
esproposal.class_instance_fields=ignore
traces=3
"
`;

exports[`FlowDriver formatConfig() [options] handles regex 1`] = `
"[options]
suppress_comment=\\\\([\\\\0-\\\\t\\\\x0B\\\\f\\\\x0E-\\\\u2027\\\\u202A-\\\\u{10FFFF}]\\\\|\\\\n\\\\)*\\\\$FlowFixMe
"
`;

exports[`FlowDriver formatConfig() [version] handles empty 1`] = `""`;

exports[`FlowDriver formatConfig() [version] supports 1`] = `
"[version]
1.2.3
"
`;
